# mcp-crawl4ai-rag

./: .dockerignore  .dockerignore.temp  .env.bak  .env.example  .gitignore  Dockerfile  Dockerfile.bak  Dockerfile.base  Dockerfile.debug  Dockerfile.minimal  Dockerfile.old  Dockerfile.optimized  Dockerfile.optimized.bak  Dockerfile.optimized.bak2  Dockerfile.orig  Dockerfile.original  Dockerfile.simple  Makefile  README.md  __init__.py  constraints.txt  docker-bake.hcl  docker-compose.override.yml  docker-compose.override.yml.bak  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.bak2  docker-entrypoint.sh  docker-entrypoint.sh.bak  entrypoint.sh  health.py  health_server.py  init-db.sh  init_db.sh  main.py  mcp_logs.txt  mypy.ini  pyproject.debug.toml  pyproject.toml  pyproject.toml.bak  (+13 more)
config/nginx/conf.d/: default.conf
data/.crawl4ai/.crawl4ai/robots/: robots_cache.db
docs/: README.md  architecture.md  configuration.md  endpoints.md  troubleshooting.md  workflow.md
knowledge_graphs/: __init__.py
scripts/: logging.ini  logging_config.py  validate_env.py
scripts/container/: start_mcp_crawl4ai.sh
src/: __init__.py  __main__.py  c4ai_firefox_guard.py  chunking.py  config.py  crawl4ai_mcp.py  crawl4ai_mcp.py.backup  crawl4ai_mcp.py.bak  embeddings.py  http_server.py  ingest.py  main.py  startup.sh  utils.py  vector_store.py
src/knowledge_graphs/: hallucination_reporter.py  knowledge_graph_validator.py  utils.py
src/mcp_crawl4ai_rag/: __init__.py  main.py
src_backup_20250703/: startup.sh
src_backup_20250703/knowledge_graphs/: __init__.py  ai_hallucination_detector.py
src_backup_20250703/mcp_crawl4ai_rag/: __init__.py  __main__.py  config.py  crawl4ai_mcp.py  main.py  py.typed
