[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-crawl4ai-rag"
version = "0.1.0"
description = "MCP service for Crawl4AI with RAG capabilities, optimized for CPU."
authors = [{ name = "Cascade", email = "cascade@windsurf.ai" }]
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
]

dependencies = [
    # Core FastAPI and server
    "fastapi",
    "uvicorn[standard]",

    # MCP client
    "fastmcp",

    # Database and vector stores
    "supabase",
    "qdrant-client>=1.7.0",
    "psycopg2-binary", # For PostgreSQL

    # Crawling and data processing
    "crawl4ai",
    "beautifulsoup4",
    "lxml",

    # ML and NLP (CPU optimized)
    "torch",
    "transformers",
    "sentence-transformers",
    "accelerate",
    "bitsandbytes",

    # Configuration and utilities
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "numpy",

    # Async support
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy"
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
warnings = true
pretty = true
show_error_codes = true
ignore_missing_imports = true

