[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-crawl4ai-rag"
version = "0.1.0"
description = "MCP service for Crawl4AI with RAG capabilities, optimized for CPU."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cascade", email = "cascade@windsurf.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.95.0,<0.110.0",
    "uvicorn>=0.21.0,<0.30.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=1.10.0,<3.0.0",
    "sqlalchemy>=2.0.0,<3.0.0",
    "psycopg2-binary>=2.9.9,<3.0.0",
    "supabase>=2.0.0,<3.0.0",
    "python-jose>=3.3.0,<4.0.0",
    "passlib>=1.7.4,<2.0.0",
    "crawl4ai>=0.6.0,<1.0.0",
    "fastmcp>=2.9.0,<3.0.0",
    "requests>=2.28.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.3.0,<6.0.0",
    "psutil>=6.1.1",
    "loguru>=0.7.0,<1.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "torch==2.0.1+cpu --index-url https://download.pytorch.org/whl/cpu",
    "qdrant-client>=1.7.0,<2.0.0",
    "transformers>=4.30.0,<5.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "huggingface-hub>=0.14.0,<1.0.0",
    "httpx>=0.24.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "neo4j>=5.0.0,<6.0.0",
    "pyjwt>=2.6.0,<3.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-crawl4ai-rag"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.5.0,<2.0.0",
]

[project.scripts]
mcp-crawl4ai-rag = "mcp_crawl4ai_rag.main:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warnings = true
pretty = true
show_error_codes = true
ignore_missing_imports = true
